# SmartStethoscope

./: .gitignore  LICENSE  README.md
.github/workflows/: static.yml
electrical/Schematic/: SmartStethoscope.PrjPcb  TopLevel.SchDoc
firmware/main/: .gitignore  CMakeLists.txt  notes.txt  partitions.csv  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
firmware/main/include/: ble_setup.h  ble_streaming_task.h  cmn.h  debug.h  dsp_ml_setup.h  heart_inference.h  lcd_ui_setup.h  lv_conf.h  mic_setup.h
firmware/main/main/: main.c
firmware/main/model/: dummy_weights.h  heart_inference.c  heart_inference.h
firmware/main/scripts/: filter.py  filter_coefficients.py  filtering_test.py  (+3 more)
firmware/main/src/: CMakeLists.txt  idf_component.yml  main.cpp
firmware/main/src/drivers/: ble_setup.cpp  button.cpp  lcd_display.cpp
firmware/main/src/model/: heart_inference.cpp
firmware/main/src/tasks/: audio_sampling_task.cpp  ble_streaming_task.cpp  debug_task.cpp  lcd_ui_task.cpp  ml_classification_task.cpp
firmware/smart-stethoscope/: platformio.ini
mechanical/V1 modular/: Part1.SLDPRT  SmartStetho.SLDASM  clip.SLDPRT  holder.SLDPRT  module.SLDPRT  wearable.SLDPRT
mechanical/V3/: 92095A460_Button Head Hex Drive Screw.SLDPRT  BodyPlastic.SLDPRT  Button.SLDPRT  ChestPiece.SLDPRT  Mic.SLDPRT  Screen.SLDPRT  TopLevel.SLDASM  adapter.SLDPRT  battery.SLDPRT  esp.SLDPRT  esp2.SLDPRT  facePlate.SLDPRT  pogo.SLDPRT
software/: heart_detection.py
software/Classification/: heart_detection.py
software/team-website/: index.html  style.css
(+33 files in other folders)
