idf_component_register(SRCS "main.cpp" 
                            "drivers/button.cpp"
                            "tasks/audio_sampling_task.cpp" 
                            "tasks/ble_streaming_task.cpp"
                            "tasks/ml_classification_task.cpp" 
                       INCLUDE_DIRS ".")