idf_component_register(SRCS "main.cpp" 
                            "drivers/button.cpp"
                            "drivers/lcd_display.cpp"
                            "tasks/audio_sampling_task.cpp" 
                            "tasks/ble_streaming_task.cpp"
                            "tasks/ml_classification_task.cpp"
                            "tasks/lcd_ui_task.cpp"
                            "tasks/debug_task.cpp"
                       INCLUDE_DIRS "."
                       REQUIRES esp-dsp lvgl esp-nimble-cpp)